<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/colorPrimary"
    tools:context=".tela_inicial">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/autenticacao"
        android:id="@+id/title"
        android:padding="25px"
        android:textSize="20sp"
        android:textColor="@color/texto_default"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/subtitle_frase"
        android:id="@+id/subtitle"
        android:layout_below="@id/title"
        android:paddingBottom="25dp"
        android:textColor="@color/texto_default"
        />

    <EditText
        android:layout_width="2in"
        android:layout_height="32dp"
        android:id="@+id/edit_fone"
        android:layout_below="@id/subtitle"
        android:hint="@string/hint_fone"
        android:background="@drawable/round"
        android:inputType="number"
        android:paddingLeft="20px"
        android:onClick="mascara"
        />

    <Button
        android:layout_width="2in"
        android:layout_height="35dp"
        android:layout_marginTop="50px"
        android:id="@+id/btn_enviar"
        android:text="@string/enviar"
        android:layout_below="@id/edit_fone"
        android:background="@drawable/button_primario"
        android:onClick="enviar"
        tools:ignore="OnClick" />


</LinearLayout>